업데이트 수정

--- a/about.html
+++ b/about.html
@@ -1,22 +1,12 @@
 ---
 layout: post
-title: "채용정보"
+title: "소개"
 author: "Walter"
 permalink: /about/
 ---
-<div id="doc" class="markdown-body container-fluid"><h1 id="g-tention-app앱-개발-채용">G-tention App앱 개발 채용</h1><h2 id="모집-내용">모집 내용</h2><ol>
-<li>모바일 앱 개발(Android / iOS 선택)</li>
-</ol><h3 id="자격-조건">자격 조건</h3><ol>
-<li>지원 OS(Android / iOS) 관련 경력 3년 이상</li>
-<li>Objective-C / Java(Swift, Kotlin 무관)</li>
-<li>스토어 런칭 및 서비스 운영 유경험자</li>
-<li>버전 관리 및 협업 유경험자</li>
-<li>코드리뷰 유경험자</li>
-</ol><h3 id="우대-사항">우대 사항</h3><ol>
-<li>모바일 OS에 대한 이해를 통해 개발자간 원할한 소통이 가능한분</li>
-<li>Restful API에 대한 이해도가 있는분</li>
-<li>FCM(GCM) / APNS 구조에 대한 이해도가 있는분</li>
-<li>개발 언어에 대한 장벽이 없는 개발자</li>
-<li>E-Commerce 서비스 경험자</li>
-<li>실 서비스(앱)를 1년 이상 운영 경험자</li>
-</ol></div>
+
+<pre>
+에잇데이즈는 드림플러스와 (주)지텐션이 함께 만든 서비스입니다.
+8DAYS를 시작으로 더 행복한 내일을 위한 직장인들의 기업 문화를 만들어 가고자 합니다.
+더 만족할 수 있는 기업문화를 만들어가는 지텐션의 도전과 혁신에 많은 관심과 따뜻한 성원 부탁드립니다.
+</pre>
