--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ comment: false
 직장인이 생각하는 복지적 혜택의 중요성은 증대되는 반면,<br>
 실제로  만족스러운 혜택은 찾기 어려운 현실!<br>
 이를 개선하고자 8days서비스가 탄생하였습니다.</p>
-</blockquote><h1 id="개발팀-소개">개발팀 소개</h1><h2 id="cris-server-side-developer">Cris Server side developer</h2><blockquote>
+</blockquote><h1 id="개발팀-소개">개발팀 소개</h1><h2 id="cris-server-side-developer">Chris Server side developer</h2><blockquote>
 <p>Everything control our team.</p>
 </blockquote><h2 id="walter-server-side-developer">Walter Server side developer</h2><img src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/10366030_636578009746259_1851482307728595160_n.jpg?oh=925e7a27aa8d6a742ff26e99a471886f&amp;oe=5AA13418" style="display: inline-block; width: 60px; height: 60px; border-radius: 50%;"><blockquote>
 <p>새로운 분야에 호기심이 많은 개발자.</p>
